--- a/Airbnb_Sentiment_Analysis_with_Transfer_Learning.ipynb
+++ b/Airbnb_Sentiment_Analysis_with_Transfer_Learning.ipynb
@@ -3512,23 +3512,38 @@
       "source": [
         "## Recommendations for the Property Owner\n",
         "\n",
-        "**1. Manage Guest Expectations**\n",
+        "### Manage Guest Expectations\n",
         "\n",
         "Update Listing Description: Since construction noise is a recurring external issue beyond the owner's control, proactively stating this in the Airbnb listing will manage guest expectations before they book.\n",
         "\n",
         "Provide Comfort Amenities: To mitigate the construction and elevator noise, the owner could provide complimentary earplugs in every room.\n",
         "\n",
-        "**2.  Prioritize Targeted Maintenance**\n",
+        "###  Prioritize Targeted Maintenance\n",
         "\n",
         "Some reviews point to specific infrastructure issues (elevator noise, plumbing/sewer smells, broken AC, and faulty bathroom locks). The owner should identify which specific room numbers correlate with these complaints and temporarily block them from being booked until plumbing and soundproofing repairs are completed.\n",
         "\n",
         "Improve Shower Facilities: Ensure hot water heaters are consistently serviced and that bathroom ventilation is improved to resolve the lingering odor issues mentioned.\n",
         "\n",
-        "**3. Elevate the \"Neutral\" Experience**\n",
+        "### Elevate the \"Neutral\" Experience\n",
         "\n",
         "Enhance the Check-in Process: One review noted the check-in was \"overly complicated.\" Streamlining this process (e.g., using a clear visual guide, a digital lockbox, or a pre-arrival WhatsApp message) will provide a good first impression.\n",
         "\n",
         "Leverage Staff Strengths: Since the staff is frequently praised, empower them to add personalized touches (e.g., a handwritten welcome note or local dining recommendations). These low-cost, high-impact gestures are proven to convert \"neutral\" stays into positive reviews."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Model Limitations\n",
+        "\n",
+        "While the model shows a reasonable accuracy of 0.74, there are limitations that need to be considered:\n",
+        "\n",
+        "### Misclassification of Negative Reviews\n",
+        "During evaluation, the model misclassified 21 out of 100 negative reviews. This indicates a blind spot where critical feedback might be overlooked as actual negative experiences are downplayed to a neutral sentiment.\n",
+        "\n",
+        "### Struggles with Neutral Sentiment\n",
+        "The model shows challenges with the neutral class (0.68 recall). This means that a significant portion (32%) of actual neutral reviews are being misclassified. This, however, acts as a safety net, as it is better to misclassify neutral reviews as negative because the business cost of ignoring a guest complaint is much higher than the cost of over-investigating a neutral comment. "
       ]
     },
     {
@@ -3563,7 +3578,7 @@
         "\n",
         "**Transparency and Explainability**\n",
         "\n",
-        "While the logistic regression classifier is highly interpretable, the DistilBERT embeddings is a \"black box.\" It is difficult to explain exactly which words or phrases triggered a specific sentiment prediction. Future iterations of this project could incorporate explainable AI (XAI) tools to highlight the specific keywords driving the model's decisions."
+        "DistilBERT generates high-dimensional contextual embeddings by processing text with millions of parameters and attention mechanisms, while SVM classifiers draw complex decision boundaries in multidimensional spaces. It is difficult to pinpoint exactly which words or phrases triggered a particular sentiment prediction. Future iterations of this project may include explainable AI (XAI) tools to highlight the specific keywords influencing the model's decisions."
       ]
     }
   ],
