--- a/Airbnb_Sentiment_Analysis_with_Transfer_Learning.ipynb
+++ b/Airbnb_Sentiment_Analysis_with_Transfer_Learning.ipynb
@@ -3491,7 +3491,9 @@
         "\n",
         "### High Volume of Neutral Sentiments (38%)\n",
         "\n",
-        "Neutral reviews frequently contain mixed sentiments (e.g., praising the location but mentioning a minor inconvenience) or purely factual statements without strong emotional vocabulary.\n",
+        "Neutral reviews frequently contain mixed sentiments (e.g., praising the location but mentioning a minor inconvenience) or purely factual statements without strong emotional vocabulary. \n",
+        "\n",
+        "A number of reviews seem to be misclassified, such as \"Clean and quiet room. Good location. Friendly checkin and checkout. Clean kitchen.\" (Positive) and \"Totally bad with the construction outside. Noisy, dangerous and hard to go in & out as the only way in is through the back lane. Noise was loud during day time and also on Sunday morning\" (Negative).\n",
         "\n",
         "### Low Attrition Rate (3% Negative) with Specific Pain Points\n",
         "\n",
