--- a/Airbnb_Sentiment_Analysis_with_Transfer_Learning.ipynb
+++ b/Airbnb_Sentiment_Analysis_with_Transfer_Learning.ipynb
@@ -3541,10 +3541,12 @@
         "\n",
         "While the model shows a reasonable accuracy of 0.74, there are limitations that need to be considered:\n",
         "\n",
-        "### Misclassification of Negative Reviews\n",
+        "**1. Misclassification of Negative Reviews:** \n",
+        "\n",
         "During evaluation, the model misclassified 21 out of 100 negative reviews. This indicates a blind spot where critical feedback might be overlooked as actual negative experiences are downplayed to a neutral sentiment.\n",
         "\n",
-        "### Struggles with Neutral Sentiment\n",
+        "**2. Struggles with Neutral Sentiment:**\n",
+        "\n",
         "The model shows challenges with the neutral class (0.68 recall). This means that a significant portion (32%) of actual neutral reviews are being misclassified. This, however, acts as a safety net, as it is better to misclassify neutral reviews as negative because the business cost of ignoring a guest complaint is much higher than the cost of over-investigating a neutral comment. "
       ]
     },
